add_executable(test1 test1.cpp)
target_compile_options( test1 PRIVATE )
if ( WIN32 )
    if(MSVC)
        set_target_properties(test1 PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
    endif()
    target_link_libraries( test1 vulkanRenderer )
endif()
if ( CMAKE_SYSTEM_NAME STREQUAL Linux )
    target_link_libraries( test1 m dl ${XCB_LIBS} vulkanRenderer )
endif()