add_executable(cube cube.cpp)
target_compile_options( cube PRIVATE )
if ( WIN32 )
    if(MSVC)
	set_target_properties( cube PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
	set_target_properties( cube PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
    endif()
    target_link_libraries( cube vulkanRenderer )
endif()
if ( CMAKE_SYSTEM_NAME STREQUAL Linux )
    target_link_libraries( cube m dl ${XCB_LIBS} vulkanRenderer )
endif()